Add email verification and account deletion functionality
- Server: Add email verification endpoints and account deletion
- Client: Add email verification UI and account deletion modal
- Mobile: Add email verification component and account deletion
- Database: Add email verification fields and indexes
- Documentation: Update README with email verification setup

--- a/server/env.example
+++ b/server/env.example
@@ -15,11 +15,15 @@ JWT_EXPIRES_IN=24h
 JWT_REFRESH_SECRET=your-refresh-secret-change-this-in-production-minimum-32-characters
 JWT_REFRESH_EXPIRES_IN=7d
 
-# Email Configuration (for password reset)
+# Email Configuration (for password reset and email verification)
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USER=your-email@gmail.com
 SMTP_PASS=your-app-password
+SMTP_FROM=noreply@mytodo.com
+
+# Client URL (for email verification links)
+CLIENT_URL=http://localhost:5173
 
 # CORS Configuration
 CORS_ORIGIN=http://localhost:3000,http://localhost:5173
