--- a/mobile/package.json
+++ b/mobile/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-community/datetimepicker": "^8.4.2",
     "@react-native/new-app-screen": "0.80.1",
     "axios": "^1.6.0",
     "react": "19.1.0",
